src/objects/DMAPP__Align_Search_Usage__c.object
<CustomObject>
    <description>Capture the details of which Maps and Solutions are viewed or used per search phrase, so that I can determine relevancy to the search phrases i&apos;ve associated them to.</description>
    <fields>
        <fullName>DMAPP__Align_Search__c</fullName>
        <label>Align Search</label>
        <referenceTo>DMAPP__Align_Search__c</referenceTo>
        <relationshipLabel>Align Search Usages</relationshipLabel>
        <relationshipName>Align_Search_Usages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DMAPP__DealmakerID__c</fullName>
        <description>An external ID used for Dealmaker</description>
        <externalId>true</externalId>
        <label>DealmakerID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMAPP__Insight_Smart_Business_Map__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Insight Smart Business Map</label>
        <referenceTo>DMAPP__Insight_Smart_Business_Map__c</referenceTo>
        <relationshipLabel>Align Search Usages</relationshipLabel>
        <relationshipName>Align_Search_Usages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMAPP__Object_Name__c</fullName>
        <description>The name of the map or solution</description>
        <inlineHelpText>The name of the map or solution</inlineHelpText>
        <label>Object Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Search_Item_Owner__c</fullName>
        <formula>IF( ISBLANK( DMAPP__Insight_Smart_Business_Map__c ) ,  DMAPP__Smart_Element__r.Owner:User.FirstName + &apos; &apos; + DMAPP__Smart_Element__r.Owner:User.LastName,  DMAPP__Insight_Smart_Business_Map__r.Owner:User.FirstName + &apos; &apos; + DMAPP__Insight_Smart_Business_Map__r.Owner:User.LastName )</formula>
        <label>Search Item Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Smart_Element__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Smart Element</label>
        <referenceTo>DMAPP__Insight_Smart_Node__c</referenceTo>
        <relationshipLabel>Align Search Usages</relationshipLabel>
        <relationshipName>Align_Search_Usages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMAPP__Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Map</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solution</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DMAPP__Used__c</fullName>
        <defaultValue>false</defaultValue>
        <description>true =&gt; Map or Solution was used
false =&gt; Map or Solution was viewed</description>
        <inlineHelpText>true =&gt; Map or Solution was used
false =&gt; Map or Solution was viewed</inlineHelpText>
        <label>Used</label>
        <type>Checkbox</type>
    </fields>
    <label>Align Search Usage</label>
    <nameField>
        <label>Align Search Usage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Align Search Usages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>